# DEX-Testcases

./: .gitignore  Makefile  README.md  command_examples.sh  compile.sh  config.mk  dalvikvm64.sh  module.mk  run.sh  run_all_device_tests.sh
ArtNativeTest/: Makefile  build.sh  push.sh  run.sh
ArtVmSelfTest/: ArtVmSelfTest.java  Makefile  build.sh
BytecodeExercise/: BytecodeExercise.java  Makefile  build.sh
BytecodePlayground/: BytecodePlayground.java  Makefile
GcReferenceSuite/: GcReferenceSuite.java  Makefile
HashCodeStabilityTest/: HashCodeStabilityTest.java  Makefile  README.md
HeapAllocationTest/: HeapAllocationTest.java  Makefile  build.sh
HeapStressSuite/: HeapStressSuite.java  Makefile
HelloWorldSample/: HelloWorldSample.java  Makefile
HelloWorldTest/: HelloWorldTest.java  Makefile  build.sh
ICUTestSuite/: ICUTestSuite.java  Makefile
InvokeShapeTest/: InvokeShapeTest.java  Makefile  run.sh
LocaleDataNpeRepro/: LocaleDataNpeRepro.java  Makefile  build.sh  run.sh
LocalePrintfRepro/: LocalePrintfRepro.java  Makefile  run.sh
LongRunningAppSim/: LongRunningAppSim.java  Makefile  README.md
NativeAltSmoke/: Makefile  NativeAltSmoke.java  build.sh
NativeIOSmoke/: Makefile  NativeIOSmoke.java
NativeInteropTest/: Makefile  run.sh
NterpInvokeTest/: Makefile  NterpInvokeTest.java  build.sh  run.sh
Null/: NullBytecodeSamples.java  build.sh
NullBytecodeSamples/: Makefile  NullBytecodeSamples.java
RandomObjectChaosTest/: Makefile  (+1 more)
src/native/NativeInteropTest/: CMakeLists.txt
src/native/NativeInteropTest/jni/: art_native_test.cpp
(+57 files in other folders)
